<resources>
    <string name="app_name">trolls-wiki</string>

    <string name="lately_search_troll_summoner_title">누구냐 넌!>_0</string>
    <string name="lately_search_null_title">유저를 검색해보세요!\n여기에 등록되어 클릭한번으로 조회 가능하답니다!</string>
    <string name="lately_search_null_button">유저 검색하러 가기</string>
    <string name="live_troll_summoner_comment_title">실시간 조리돌림</string>
    <string name="search_hint">Search Troll</string>
    <string name="service_warning">본 서비스로 인한 민/형사적 처벌은 책임지지 않습니다.</string>
    <string name="not_found_summoner_dialog_title">알림</string>
    <string name="not_found_summoner_dialog_message">존재 하지 않는 소환사 입니다.</string>
    <string name="not_found_summoner_dialog_button">확인</string>

    <!-- menu -->
    <string name="setting_title">설정</string>
    <string name="notice_title">공지사항</string>

    <!-- troll summoner register -->
    <string name="troll_summoner_register_null_title">등록되지 않은 유저입니다!</string>
    <string name="troll_summoner_register_image_title">이미지 첨부</string>
    <string name="troll_summoner_register_video_title">동영상 링크</string>
    <string name="troll_summoner_register_button_title">유저 등록하기</string>

    <!-- troll register video link -->
    <string name="troll_register_video_link_title">링크 입력</string>
    <string name="troll_register_video_link_edit_hint">유튜브 링크를 입력해주세요.</string>
    <string name="troll_register_video_link_add_button">확인</string>
    <string name="troll_register_video_link_close_button">취소</string>

    <!-- troll summoner info -->
    <string name="troll_summoner_info_menu_comment">유저 댓글</string>
    <string name="troll_summoner_info_menu_reason">등록 사유</string>
    <string name="troll_summoner_info_menu_name_history">이름 이력</string>
    <string name="troll_summoner_info_menu_game_history">최근 전적</string>

    <!-- troll summoner info comment -->
    <string name="troll_summoner_info_comment_nick_hint">닉네임 입력</string>
    <string name="troll_summoner_info_comment_body_hint">댓글 내용 입력</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>