<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/troll_register_video_link_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/troll_register_video_link_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/troll_register_video_link_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/troll_register_video_link_edit_hint"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/troll_register_video_link_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/troll_register_video_link_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/troll_register_video_link_add_button"
        android:background="@null"
        android:layout_marginEnd="8dp"
        android:textColor="@color/blue"
        app:layout_constraintTop_toTopOf="@id/troll_register_video_link_close_btn"
        app:layout_constraintEnd_toStartOf="@id/troll_register_video_link_close_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/troll_register_video_link_close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/troll_register_video_link_close_button"
        android:background="@null"
        android:layout_marginTop="32dp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/troll_register_video_link_edit"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>