<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.TrollSummonerInfo">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guide_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guide_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66"/>

    <View
        android:id="@+id/troll_summoner_info_top_line"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:background="@color/switch_gray"
        app:layout_constraintStart_toStartOf="@id/vertical_guide_3"
        app:layout_constraintEnd_toEndOf="@id/vertical_guide_6"
        app:layout_constraintTop_toTopOf="parent"/>

    <include
        android:id="@+id/lately_search_troll_summoner_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/troll_summoner_info_top_line"
        layout="@layout/lately_search_troll_summoner_recycler_item"/>

    <HorizontalScrollView
        android:id="@+id/troll_summoner_info_menu_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lately_search_troll_summoner_info">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/troll_summoner_info_menu_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/troll_summoner_title_background"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:layout_marginEnd="16dp"
                android:text="@string/troll_summoner_info_menu_comment"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/troll_summoner_info_menu_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/troll_summoner_title_background"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:layout_marginEnd="16dp"
                android:text="@string/troll_summoner_info_menu_reason"
                android:alpha="0.5"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/troll_summoner_info_menu_name_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/troll_summoner_title_background"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:layout_marginEnd="16dp"
                android:text="@string/troll_summoner_info_menu_name_history"
                android:alpha="0.5"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/troll_summoner_info_menu_game_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/troll_summoner_title_background"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:text="@string/troll_summoner_info_menu_game_history"
                android:alpha="0.5"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </HorizontalScrollView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/troll_summoner_info_menu_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/troll_summoner_info_menu_layout"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>