<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.TrollSummonerRegister">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guide_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guide_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66"/>

    <View
        android:id="@+id/troll_summoner_register_top_line"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:background="@color/switch_gray"
        app:layout_constraintStart_toStartOf="@id/vertical_guide_3"
        app:layout_constraintEnd_toEndOf="@id/vertical_guide_6"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/troll_summoner_register_null_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/troll_summoner_register_null_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/troll_summoner_register_top_line"/>

    <View
        android:id="@+id/troll_summoner_register_middle_line"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/switch_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/troll_summoner_register_null_title"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/troll_summoner_register_scroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        app:layout_constraintTop_toBottomOf="@id/troll_summoner_register_middle_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/troll_summoner_register_image_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/troll_summoner_register_image_title"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/troll_summoner_register_image_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_image_search_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/troll_summoner_register_image_title"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/troll_summoner_register_image_recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/troll_summoner_register_image_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/troll_summoner_register_video_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="24dp"
                android:text="@string/troll_summoner_register_video_title"
                app:layout_constraintTop_toBottomOf="@id/troll_summoner_register_image_recycler"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/troll_summoner_register_video_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_add_link_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/troll_summoner_register_video_title"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/troll_summoner_register_video_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/link_color"
                app:layout_constraintTop_toBottomOf="@id/troll_summoner_register_video_title"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/troll_summoner_register_video_thumbnail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/troll_summoner_register_video_link"
                app:layout_constraintTop_toBottomOf="@id/troll_summoner_register_video_link"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/troll_summoner_register_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/troll_summoner_register_button_title"
        android:background="@drawable/search_button_background"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/troll_summoner_register_scroll"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>